<resources>
    <string name="app_name">Tasks</string>
    <string name="description">Описание</string>
    <string name="repeats">Повторений</string>
    <string name="category_title">Категория</string>
    <string name="add_counter">Добавить счетчик повторов</string>
    <string name="add_timer">Добавить таймер</string>
    <string name="add_deadline">Добавить дедлайн</string>
    <string name="deadline_title">Дата окончания</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="timer_title">Необходимо потратить времени</string>
    <string name="button_confirm_title">сохранить</string>
    <string name="add_task_menu_title">добавить задачу</string>
    <string name="base_count_of_repeats">1</string>
</resources>