<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_paper_texture">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchRepeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/add_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_timer"
        app:layout_constraintEnd_toEndOf="@id/switchRepeats"
        app:layout_constraintTop_toBottomOf="@+id/switchRepeats" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_deadline"
        app:layout_constraintEnd_toEndOf="@id/switchRepeats"
        app:layout_constraintTop_toBottomOf="@+id/switchTimer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchDeadline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvSpinnerContent" />

    <TextView
        android:id="@+id/tvSpinnerContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/category_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRepeats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategories">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_count_of_repeats"
            android:inputType="numberDecimal"
            android:hint="@string/repeats" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDeadlineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/deadline_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilRepeats" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/etTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeadlineTitle"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/etTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etDate"
        app:layout_constraintTop_toBottomOf="@id/tvDeadlineTitle"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tvTimerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:text="@string/timer_title"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTimerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberDecimal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_confirm_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>